# proyecto1progra2

./: .gitignore  Actualizacion.cpp  Actualizacion.h  AllInOne.cpp  AllInOne.h  CMakeLists.txt  CambioComponentes.cpp  CambioComponentes.h  ComputadoraEscritorio.cpp  ComputadoraEscritorio.h  Equipo.cpp  Equipo.h  ErrorArchivo.cpp  ErrorArchivo.h  ErrorArchivoEscritura.cpp  ErrorArchivoEscritura.h  ErrorArchivoLectura.cpp  ErrorArchivoLectura.h  ErrorCast.cpp  ErrorCast.h  ErrorDecimal.cpp  ErrorDecimal.h  ErrorNegativo.cpp  ErrorNegativo.h  ErrorRango.cpp  ErrorRango.h  ErrorValor.cpp  ErrorValor.h  Incidencia.cpp  Incidencia.h  Laptop.cpp  Laptop.h  ListaEquipo.cpp  ListaEquipo.h  ListaIncidencia.cpp  ListaIncidencia.h  Mantenimiento.cpp  Mantenimiento.h  MantenimientoBase.cpp  MantenimientoBase.h  (+17 more)
cabeceras/: Incidencia.h
cabeceras/archivos/: ILectorArchivo.h  LectorEquipos.h  LectorIncidencias.h
cabeceras/equipos/: AllInOne.h  ComputadoraEscritorio.h  Equipo.h  Laptop.h  Microscopio.h  Osciloscopio.h
cabeceras/listas/: ListaEquipo.h  ListaIncidencia.h
cabeceras/mantenimientos/: Mantenimiento.h  MantenimientoSoftware.h
origen/: Incidencia.cpp
origen/archivos/: ILectorArchivo.cpp  LectorEquipos.cpp  LectorIncidencias.cpp
origen/equipos/: AllInOne.cpp  ComputadoraEscritorio.cpp  Equipo.cpp  Laptop.cpp  Microscopio.cpp  Osciloscopio.cpp
origen/listas/: ListaEquipo.cpp  ListaIncidencia.cpp
origen/mantenimientos/: MantenimientoBase.cpp  MantenimientoCambio.cpp  MantenimientoSoftware.cpp
