cmake_minimum_required(VERSION 4.1)
project(Proyecto_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(Proyecto_1 main.cpp
        Equipo.cpp
        Equipo.h
        Laptop.cpp
        Laptop.h
        AllInOne.cpp
        AllInOne.h
        ComputadoraEscritorio.cpp
        ComputadoraEscritorio.h
        ListaEquipo.cpp
        ListaEquipo.h
        NodoEquipo.cpp
        NodoEquipo.h
        NodoIncidencia.cpp
        NodoIncidencia.h
        ListaIncidencia.cpp
        ListaIncidencia.h
        Incidencia.cpp
        Incidencia.h
        Mantenimiento.cpp
        Mantenimiento.h
        MantenimientoBase.cpp
        MantenimientoBase.h
        Actualizacion.cpp
        Actualizacion.h
        CambioComponentes.cpp
        CambioComponentes.h
        MantenimientoDecorador.cpp
        MantenimientoDecorador.h
        ErrorArchivo.cpp
        ErrorArchivo.h
        ErrorArchivoLectura.cpp
        ErrorArchivoLectura.h
        ErrorArchivoEscritura.cpp
        ErrorArchivoEscritura.h
        ErrorDecimal.cpp
        ErrorDecimal.h
        ErrorNegativo.cpp
        ErrorNegativo.h
        ErrorCast.cpp
        ErrorCast.h
        Osciloscopio.cpp
        Osciloscopio.h
        Microscopio.cpp
        Microscopio.h
        MantenimientoSoftware.cpp
        MantenimientoSoftware.h
        MantenimientoCambio.cpp
        MantenimientoCambio.h)
